(refactor) changed file reader to output vector of strings, corrected tagging system to match

--- a/examples/template_files/basic_sample.html
+++ b/examples/template_files/basic_sample.html
@@ -1,10 +1,10 @@
 <html>
   <body>
     <div>
-      {{ value1 }}
+      <span>{{ value1 }}</span>
     </div>
     <div>
-      {{ value2 }}
+      <span>{{ value2 }}</span>
     </div>
     <div>
       {{ value3 }}
