--- a/examples/template_files/basic_sample.html
+++ b/examples/template_files/basic_sample.html
@@ -7,7 +7,8 @@
       <span>{{ value2 }}</span>
     </div>
     <div>
-      {{ value3 }}
+      <b>{{ value3 }}</b>
+      <a>{{ value4 }}</a>
     </div>
 </body>
 </html>
