(test) updated tests and reimplemented end to end test

--- a/examples/template_files/basic_sample.html
+++ b/examples/template_files/basic_sample.html
@@ -1,14 +1,1 @@
-<html>
-  <body>
-    <div>
-      <span>{{ value1 }}</span>
-    </div>
-    <div>
-      <span>{{ value2 }}</span>
-    </div>
-    <div>
-      <b>{{ value3 }}</b>
-      <a>{{ value4 }}</a>
-    </div>
-</body>
-</html>
+<html><body><div><span>{{ value1 }}</span></div><div><span>{{ value2 }}</span></div><div><b>{{ value3 }}</b><a>{{ value4 }}</a></div></body></html>
