(feat) Added handling of lambdas

--- a/test_data/json.html
+++ b/test_data/json.html
@@ -23,12 +23,8 @@
       Company: {ACME <br>
     </div>
     <div>
-      <div> <br>
-    </div>
-    <div>
-      <div>{&quot;tyler&quot;&quot;robert&quot;</div>
-      <div></div>
-      <div>{&quot;john&quot;&quot;robert&quot;</div>
+      <div>&quot;tyler&quot;&quot;robert&quot;</div>
+      <div>&quot;john&quot;&quot;robert&quot;</div>
     </div>
   </body>
 </html>
