--- a/test_data/section_with_partial.html
+++ b/test_data/section_with_partial.html
@@ -11,12 +11,14 @@
           <th>Last:</th>
         
           <tr><td>Jarrod</td><td>Ruhland</td></tr><tr><td>Sean</td><td>Chen</td></tr><tr><td>Fleur</td><td>Dragan</td></tr><tr><td>Jim</td><td>O'Brien</td></tr>
-          We're awesome.
+          e're awesome.
+We're awesome.
 
         
       </table>
     </div>
-    <p>We're awesome.
+    <p>e're awesome.
+We're awesome.
 </p>
   </body>
 </html>
