(refactor) implemented massive regex with whitespace checking, updated a few tests

--- a/test_data/section_with_partial.html
+++ b/test_data/section_with_partial.html
@@ -1,24 +1,9 @@
-<html>
-  <head>
-    <title>Rustache End-To-End</title>
-  </head>
-  <body>
-    <div class="main">
-      Team Awesome:
-      <table>
-        <tr>
-          <th>First:</th>
           <th>Last:</th>
         
           <tr><td>Jarrod</td><td>Ruhland</td></tr><tr><td>Sean</td><td>Chen</td></tr><tr><td>Fleur</td><td>Dragan</td></tr><tr><td>Jim</td><td>O'Brien</td></tr>
-          e're awesome.
-We're awesome.
+          We're awesome.
 
-        
-      </table>
-    </div>
-    <p>e're awesome.
-We're awesome.
+            <p>We're awesome.
 </p>
   </body>
 </html>
